constructor, default constructor parameter commit

--- a/oop-datacamp-think-pad.ipynb
+++ b/oop-datacamp-think-pad.ipynb
@@ -12,7 +12,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# self is object reference "
+   ]
   },
   {
    "cell_type": "code",
@@ -246,87 +248,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Counter.__init__() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcount \u001b[38;5;241m=\u001b[39m Counter\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m=\u001b[39m name\n\u001b[1;32m----> 6\u001b[0m c \u001b[38;5;241m=\u001b[39m \u001b[43mCounter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMy counter\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(c\u001b[38;5;241m.\u001b[39mcount)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Counter.__init__() takes 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self, count):\n",
+    "        self.count = Counter\n",
+    "        self.name = name\n",
+    "        \n",
+    "c = Counter(0, \"My counter\")\n",
+    "print(c.count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self, count, name):\n",
+    "        self.count = 5\n",
+    "        self.name = name\n",
+    "        \n",
+    "c = Counter(0, \"My counter\")\n",
+    "print(c.count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;21;43;01mCounter\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcount\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMy counter\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\n",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m, in \u001b[0;36mCounter\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mCounter\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241m.\u001b[39mcount \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMy counter\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class Counter:\n",
+    "    self.count = 5\n",
+    "    self.name = \"My counter\"\n",
+    "        \n",
+    "c = Counter(0, \"My counter\")\n",
+    "print(c.count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Counter' object has no attribute 'count'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m=\u001b[39m name\n\u001b[0;32m      5\u001b[0m c \u001b[38;5;241m=\u001b[39m Counter(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMy counter\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcount\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Counter' object has no attribute 'count'"
+     ]
+    }
+   ],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self, count, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "c = Counter(0, \"My counter\")\n",
+    "print(c.count)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class Employee:\n",
+    "  # Create __init__() method\n",
+    "  ____ ____(____, name, ____):\n",
+    "    # Create the name and salary attributes\n",
+    "    self.____ = ____\n",
+    "    ____ = ____\n",
+    "    \n",
+    "  def give_raise(self, amount):\n",
+    "    self.salary += amount\n",
+    "\n",
+    "  def monthly_salary(self):\n",
+    "    return self.salary / 12\n",
+    "        \n",
+    "emp = Employee(\"Korel Rossi\")\n",
+    "print(emp.name)\n",
+    "print(emp.salary)     \n",
+    "Define the Employee class with a constructor that accepts two arguments, name and salary (the latter with a default value of 0).\n",
+    "Create two attributes, also called name and salary, setting their values to the corresponding arguments."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, salary=0):\n",
+    "        self.name = name\n",
+    "        self.salary = salary\n",
+    "        \n",
+    "    def give_raise(self, amount):\n",
+    "        self.salary += amount\n",
+    "\n",
+    "    def monthly_salary(self):\n",
+    "        return self.salary / 12\n",
+    "\n",
+    "emp = Employee(\"Korel Rossi\")\n",
+    "print(emp.name)\n",
+    "print(emp.salary)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Employee:\n",
+    "      # Create __init__() method\n",
+    "  def __init__(self, name, salary=0):\n",
+    "    # Create the name and salary attributes\n",
+    "    self.name = name\n",
+    "    self.salary = salary\n",
+    "    \n",
+    "  def give_raise(self, amount):\n",
+    "    self.salary += amount\n",
+    "\n",
+    "  def monthly_salary(self):\n",
+    "    return self.salary / 12\n",
+    "        \n",
+    "emp = Employee(\"Korel Rossi\")\n",
+    "print(emp.name)\n",
+    "print(emp.salary)     \n",
+    "\n",
+    "\"\"\"The Employee class now has a constructor (__init__ method) that accepts two arguments, name and salary (with a default value of 0). Inside the constructor, it initializes two attributes, name and salary, with the values passed as arguments.\"\"\"\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Add a class constructor\n",
+    "In this exercise, you'll continue working on the Employee class. Instead of using the methods like set_salary() that you wrote in the previous lesson, you will introduce a constructor that assigns name and salary to the employee at the moment when the object is created.\n",
+    "\n",
+    "Initializing attributes in the constructor is a good idea because this ensures that the object has all the necessary attributes the moment it is created.\n",
+    "\n",
+    "Instructions 2/2\n",
+    "50 XP\n",
+    "2\n",
+    "Modify __init__() to check whether the salary parameter is positive, assigning to the salary attribute if true, or assigning 0 and printing \"Invalid salary!\" if false.\n",
+    "\n",
+    "class Employee:\n",
+    "      def __init__(self, name, salary=0):\n",
+    "    self.name = name\n",
+    "    # Check if salary is positive\n",
+    "    ____ ____ ____ ____:\n",
+    "      ____.____ = ____\n",
+    "    ____:\n",
+    "      ____.____ = ____\n",
+    "      print(\"____\")\n",
+    "\n",
+    "  def give_raise(self, amount):\n",
+    "    self.salary += amount\n",
+    "\n",
+    "  def monthly_salary(self):\n",
+    "    return self.salary / 12\n",
+    "      \n",
+    "emp = Employee(\"Korel Rossi\", -1000)\n",
+    "print(emp.name)\n",
+    "print(emp.salary)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# solution\n",
+    "class Employee:\n",
+    "    def __init__(self, name, salary=0):\n",
+    "        self.name = name\n",
+    "        # Check if salary is positive\n",
+    "        if salary >= 0:\n",
+    "            self.salary = salary\n",
+    "        else:\n",
+    "            self.salary = 0\n",
+    "            print(\"Invalid salary!\")\n",
+    "\n",
+    "    def give_raise(self, amount):\n",
+    "        self.salary += amount\n",
+    "\n",
+    "    def monthly_salary(self):\n",
+    "        return self.salary / 12\n",
+    "      \n",
+    "emp = Employee(\"Korel Rossi\", -1000)\n",
+    "print(emp.name)\n",
+    "print(emp.salary)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Employee:\n",
+    "      def __init__(self, name, salary=0):\n",
+    "    self.name = name\n",
+    "    # Check if salary is positive\n",
+    "    if salary >= 0:\n",
+    "      self.salary = salary\n",
+    "    else:\n",
+    "      self.salary = salary\n",
+    "      print(\"\"Invalid salary\"\")\n",
+    "\n",
+    "  def give_raise(self, amount):\n",
+    "    self.salary += amount\n",
+    "\n",
+    "  def monthly_salary(self):\n",
+    "    return self.salary / 12\n",
+    "      \n",
+    "emp = Employee(\"Korel Rossi\", -1000)\n",
+    "print(emp.name)\n",
+    "print(emp.salary)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Employee:\n",
+    "      def __init__(self, name, salary=0):\n",
+    "    self.name = name\n",
+    "    # Check if salary is positive\n",
+    "    if salary >= 0:\n",
+    "      self.salary = salary\n",
+    "    else:\n",
+    "      self.salary = 0\n",
+    "      print(\"Invalid salary!\")\n",
+    "      \n",
+    "  def give_raise(self, amount):\n",
+    "    self.salary += amount\n",
+    "\n",
+    "  def monthly_salary(self):\n",
+    "    return self.salary / 12\n",
+    "      \n",
+    "emp = Employee(\"Korel Rossi\", -1000)\n",
+    "print(emp.name)\n",
+    "print(emp.salary)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Define and initialize the Calculator class\n",
+    "____:\n",
+    "  ____ ____(____, ____, ____):\n",
+    "    self.____ = ____\n",
+    "    self.____ = ____\n",
+    "  \n",
+    "  # Create the addition method\n",
+    "  def ____(____):\n",
+    "    return self.____ ____ self.____\n",
+    "  \n",
+    "  # Create the subtraction method\n",
+    "  def ____(____):\n",
+    "    return ____\n",
+    "  \n",
+    "  # Create the multiplication method\n",
+    "  def ____(____):\n",
+    "    ____   \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Define a Calculator class with two parameters on initialization: num_one and num_two.\n",
+    "Define an addition() method, which returns self.num_one plus num_two.\n",
+    "Define an subtraction() method, which returns self.num_one minus num_two.\n",
+    "Define an multiplication() method, which returns self.num_one multiplied by num_two."
+   ]
   },
   {
    "cell_type": "code",
