--- a/oop-datacamp-think-pad.ipynb
+++ b/oop-datacamp-think-pad.ipynb
@@ -573,10 +573,10 @@
     "\n",
     "\n",
     "\n",
-    "Define a Calculator class with two parameters on initialization: num_one and num_two.\n",
-    "Define an addition() method, which returns self.num_one plus num_two.\n",
-    "Define an subtraction() method, which returns self.num_one minus num_two.\n",
-    "Define an multiplication() method, which returns self.num_one multiplied by num_two."
+    "# Define a Calculator class with two parameters on initialization: num_one and num_two.\n",
+    "# Define an addition() method, which returns self.num_one plus num_two.\n",
+    "# Define an subtraction() method, which returns self.num_one minus num_two.\n",
+    "# Define an multiplication() method, which returns self.num_one multiplied by num_two."
    ]
   },
   {
