inheritance and polymorphism

--- a/oop-datacamp-think-pad.ipynb
+++ b/oop-datacamp-think-pad.ipynb
@@ -584,63 +584,403 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Class-level attributes\n",
+    "Class attributes store data that is shared among all the class instances. They are assigned values in the class body and are referred to using the ClassName. syntax rather than self. syntax when used in methods.\n",
+    "\n",
+    "In this exercise, you will be a game developer working on a game that will have several players moving on a grid and interacting with each other. As the first step, you want to define a Player class that will just move along a straight line. Player will have a position attribute and move along a grid with a limited number of positions, so the position of Player will have a maximal value.\n",
+    "\n",
+    "Instructions\n",
+    "100 XP\n",
+    "Define a Player class.\n",
+    "Create a class attribute called MAX_POSITION with value of 10.\n",
+    "In the __init__() constructor, set the position that assigns to an object to 0.\n",
+    "Create a Player object p and print its MAX_POSITION."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a Player class\n",
+    "____:\n",
+    "  \n",
+    "  # Create MAX_POSITION class attribute\n",
+    "  ____ = ____\n",
+    "  \n",
+    "  # Add a constructor, setting position to zero\n",
+    "  ____:\n",
+    "    ____.____ = ____\n",
+    "\n",
+    "# Create a player p and print its MAX_POSITITON\n",
+    "p = ____()\n",
+    "print(____.____)\n",
+    "Define a Player class.\n",
+    "Create a class attribute called MAX_POSITION with value of 10.\n",
+    "In the __init__() constructor, set the position that assigns to an object to 0.\n",
+    "Create a Player object p and print its MAX_POSITION."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Implementing logic for attributes\n",
+    "The Player class you previously created was a good start, but one of the key benefits of class-level attributes is their ability to restrict the upper and/or lower boundaries of data.\n",
+    "\n",
+    "In this exercise, you'll modify the Player class definition to restrict the value of position from going above the class-level MAX_POSITION value.\n",
+    "\n",
+    "Instructions\n",
+    "100 XP\n",
+    "Define the __init__() constructor with two arguments, self and position.\n",
+    "Inside the constructor, check if position is less than or equal to the class-level MAX_POSITION; if so, assign position to self.position\n",
+    "If position is more than the class-level MAX_POSITION, assign it to the class' .MAX_POSITION attribute.\n",
+    "Create a Player object p with a position of 6 and print its MAX_POSITION."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Player:\n",
+    "  MAX_POSITION = 10\n",
+    "  \n",
+    "  # Define a constructor\n",
+    "  ____ ____(____, ____):\n",
+    "    \n",
+    "    # Check if position is less than the class-level attribute value\n",
+    "    if ____ <= ____.____:\n",
+    "      ____.____ = ____\n",
+    "    \n",
+    "    # If not, set equal to the class-level attribute\n",
+    "    else:\n",
+    "      ____.____ = ____.____\n",
+    "\n",
+    "# Create a Player object, p, and print its MAX_POSITITON\n",
+    "p = ____(____)\n",
+    "print(____.____)\n",
+    "Define the __init__() constructor with two arguments, self and position.\n",
+    "Inside the constructor, check if position is less than or equal to the class-level MAX_POSITION; if so, assign position to self.position\n",
+    "If position is more than the class-level MAX_POSITION, assign it to the class' .MAX_POSITION attribute.\n",
+    "Create a Player object p with a position of 6 and print its MAX_POSITION."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# solution\n",
+    "class Player:\n",
+    "    MAX_POSITION = 10\n",
+    "  \n",
+    "    # Define a constructor\n",
+    "    def __init__(self, position):\n",
+    "        # Check if position is less than the class-level attribute value\n",
+    "        if position <= Player.MAX_POSITION:\n",
+    "            self.position = position\n",
+    "        # If not, set equal to the class-level attribute\n",
+    "        else:\n",
+    "            self.position = Player.MAX_POSITION \n",
+    "\n",
+    "# Create a Player object, p, and print its MAX_POSITION\n",
+    "p = Player(6)\n",
+    "print(Player.MAX_POSITION)\n",
+    "\n",
+    "# Clever class attribute skills! People creating objects from the previous version of the Player class could have set their position above 10, violating the class-level data you set. The new class definition prevents this violation from occurring!"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Changing class attributes\n",
+    "You learned how to define class attributes and how to access them from class instances. So what will happen if you try to assign another value to a class attribute when accessing it from an instance?\n",
+    "\n",
+    "The Player class from the previous exercise has been pre-defined, as shown below:\n",
+    "\n",
+    "class Player:\n",
+    "    MAX_POSITION = 10\n",
+    "    def __init__(self, position):\n",
+    "        if position <= Player.MAX_POSITION:\n",
+    "              self.position = position\n",
+    "        else:\n",
+    "              self.position = Player.MAX_POSITION\n",
+    "Instructions\n",
+    "100 XP\n",
+    "Instructions\n",
+    "100 XP\n",
+    "Create two Player objects: p1 and p2, with positions of 9 and 5 respectively.\n",
+    "Print p1.MAX_POSITION and p2.MAX_POSITION.\n",
+    "Assign 7 to p1.MAX_POSITION.\n",
+    "Print p1.MAX_POSITION and p2.MAX_POSITION again."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create Players p1 and p2\n",
+    "p1 = ____\n",
+    "p2 = ____\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 before assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "____\n",
+    "____\n",
+    "\n",
+    "# Assign 7 to p1.MAX_POSITION\n",
+    "____\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 after assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "____\n",
+    "____\n",
+    "\n",
+    "Create two Player objects: p1 and p2, with positions of 9 and 5 respectively.\n",
+    "Print p1.MAX_POSITION and p2.MAX_POSITION.\n",
+    "Assign 7 to p1.MAX_POSITION.\n",
+    "Print p1.MAX_POSITION and p2.MAX_POSITION again.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# solution\n",
+    "class Player:\n",
+    "    MAX_POSITION = 10\n",
+    "  \n",
+    "    # Define a constructor\n",
+    "    def __init__(self, position):\n",
+    "        # Check if position is less than the class-level attribute value\n",
+    "        if position <= Player.MAX_POSITION:\n",
+    "            self.position = position\n",
+    "        # If not, set equal to the class-level attribute\n",
+    "        else:\n",
+    "            Player.MAX_POSITION = position\n",
+    "\n",
+    "# Create Players p1 and p2\n",
+    "p1 = Player(9)\n",
+    "p2 = Player(5)\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 before assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "print(p1.MAX_POSITION)\n",
+    "print(p2.MAX_POSITION)\n",
+    "\n",
+    "# Assign 7 to p1.MAX_POSITION\n",
+    "p1.MAX_POSITION = 7\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 after assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "print(p1.MAX_POSITION)\n",
+    "print(p2.MAX_POSITION)\n",
+    "\n",
+    "# Not obvious, right? But it makes sense when you think about it! You shouldn't be able to change the data in all the instances of the class through a single instance. Imagine if you could change the time on all the computers in the world by changing the time on your own computer! If you want to change the value of the class attribute at runtime, you need to do it by referring to the class name, not through an instance."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a Player class\n",
+    "____:\n",
+    "  \n",
+    "  # Create MAX_POSITION class attribute\n",
+    "  ____ = ____\n",
+    "  \n",
+    "  # Add a constructor, setting position to zero\n",
+    "  ____:\n",
+    "    ____.____ = ____\n",
+    "\n",
+    "# Create a player p and print its MAX_POSITITON\n",
+    "p = ____()\n",
+    "print(____.____)\n",
+    "Define a Player class.\n",
+    "Create a class attribute called MAX_POSITION with value of 10.\n",
+    "In the __init__() constructor, set the position that assigns to an object to 0.\n",
+    "Create a Player object p and print its MAX_POSITION.\n",
+    "ChatGPT\n",
+    "Here's the Python code implementing the requirements:\n",
+    "\n",
+    "python\n",
+    "Copy code\n",
+    "class Player:\n",
+    "    # Create MAX_POSITION class attribute\n",
+    "    MAX_POSITION = 10\n",
+    "  \n",
+    "    # Add a constructor, setting position to zero\n",
+    "    def __init__(self):\n",
+    "        self.position = 0\n",
+    "\n",
+    "# Create a player p and print its MAX_POSITION\n",
+    "p = Player()\n",
+    "print(Player.MAX_POSITION)\n",
+    "This code defines a Player class with a class attribute MAX_POSITION set to 10. The __init__() constructor sets the initial position of the player object to 0. Then, it creates a Player object p and prints its MAX_POSITION.\n",
+    "\n",
+    "User\n",
+    "class Player:\n",
+    "  MAX_POSITION = 10\n",
+    "  \n",
+    "  # Define a constructor\n",
+    "  ____ ____(____, ____):\n",
+    "    \n",
+    "    # Check if position is less than the class-level attribute value\n",
+    "    if ____ <= ____.____:\n",
+    "      ____.____ = ____\n",
+    "    \n",
+    "    # If not, set equal to the class-level attribute\n",
+    "    else:\n",
+    "      ____.____ = ____.____\n",
+    "\n",
+    "# Create a Player object, p, and print its MAX_POSITITON\n",
+    "p = ____(____)\n",
+    "print(____.____)\n",
+    "Define the __init__() constructor with two arguments, self and position.\n",
+    "Inside the constructor, check if position is less than or equal to the class-level MAX_POSITION; if so, assign position to self.position\n",
+    "If position is more than the class-level MAX_POSITION, assign it to the class' .MAX_POSITION attribute.\n",
+    "Create a Player object p with a position of 6 and print its MAX_POSITION.\n",
+    "ChatGPT\n",
+    "Here's the completed code with the instructions implemented:\n",
+    "\n",
+    "python\n",
+    "Copy code\n",
+    "class Player:\n",
+    "    MAX_POSITION = 10\n",
+    "  \n",
+    "    # Define a constructor\n",
+    "    def __init__(self, position):\n",
+    "        # Check if position is less than the class-level attribute value\n",
+    "        if position <= Player.MAX_POSITION:\n",
+    "            self.position = position\n",
+    "        # If not, set equal to the class-level attribute\n",
+    "        else:\n",
+    "            self.position = Player.MAX_POSITION\n",
+    "\n",
+    "# Create a Player object, p, and print its MAX_POSITION\n",
+    "p = Player(6)\n",
+    "print(p.MAX_POSITION)\n",
+    "This code defines a Player class with a class attribute MAX_POSITION set to 10. The __init__() constructor takes two arguments, self (implicitly) and position. Inside the constructor, it checks if the provided position is less than or equal to the MAX_POSITION. If so, it assigns position to self.position. If position is greater than MAX_POSITION, it assigns MAX_POSITION to self.position. Then, it creates a Player object p with a position of 6 and prints its MAX_POSITION.\n",
+    "\n",
+    "User\n",
+    "class Player:\n",
+    "  MAX_POSITION = 10\n",
+    "  \n",
+    "  # Define a constructor\n",
+    "  ____ ____(____, ____):\n",
+    "    \n",
+    "    # Check if position is less than the class-level attribute value\n",
+    "    if ____ <= ____.____:\n",
+    "      ____.____ = ____\n",
+    "    \n",
+    "    # If not, set equal to the class-level attribute\n",
+    "    else:\n",
+    "      ____.____ = ____.____\n",
+    "\n",
+    "# Create a Player object, p, and print its MAX_POSITITON\n",
+    "p = ____(____)\n",
+    "print(____.____)\n",
+    "Define the __init__() constructor with two arguments, self and position.\n",
+    "Inside the constructor, check if position is less than or equal to the class-level MAX_POSITION; if so, assign position to self.position\n",
+    "If position is more than the class-level MAX_POSITION, assign it to the class' .MAX_POSITION attribute.\n",
+    "Create a Player object p with a position of 6 and print its MAX_POSITION.\n",
+    "ChatGPT\n",
+    "Here's the completed code with the instructions implemented:\n",
+    "\n",
+    "python\n",
+    "Copy code\n",
+    "class Player:\n",
+    "    MAX_POSITION = 10\n",
+    "  \n",
+    "    # Define a constructor\n",
+    "    def __init__(self, position):\n",
+    "        # Check if position is less than the class-level attribute value\n",
+    "        if position <= Player.MAX_POSITION:\n",
+    "            self.position = position\n",
+    "        # If not, set equal to the class-level attribute\n",
+    "        else:\n",
+    "            Player.MAX_POSITION = position\n",
+    "\n",
+    "# Create a Player object, p, and print its MAX_POSITION\n",
+    "p = Player(6)\n",
+    "print(Player.MAX_POSITION)\n",
+    "This code defines a Player class with a class attribute MAX_POSITION set to 10. The __init__() constructor takes two arguments, self (implicitly) and position. Inside the constructor, it checks if the provided position is less than or equal to the MAX_POSITION. If so, it assigns position to self.position. If position is greater than MAX_POSITION, it updates MAX_POSITION to the new value of position. Then, it creates a Player object p with a position of 6 and prints its MAX_POSITION.\n",
+    "\n",
+    "User\n",
+    "# Create Players p1 and p2\n",
+    "p1 = ____\n",
+    "p2 = ____\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 before assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "____\n",
+    "____\n",
+    "\n",
+    "# Assign 7 to p1.MAX_POSITION\n",
+    "____\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 after assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "____\n",
+    "____\n",
+    "\n",
+    "Create two Player objects: p1 and p2, with positions of 9 and 5 respectively.\n",
+    "Print p1.MAX_POSITION and p2.MAX_POSITION.\n",
+    "Assign 7 to p1.MAX_POSITION.\n",
+    "Print p1.MAX_POSITION and p2.MAX_POSITION again.\n",
+    "\n",
+    "ChatGPT\n",
+    "Here's the completed code with the instructions implemented:\n",
+    "\n",
+    "python\n",
+    "Copy code\n",
+    "class Player:\n",
+    "    MAX_POSITION = 10\n",
+    "  \n",
+    "    # Define a constructor\n",
+    "    def __init__(self, position):\n",
+    "        # Check if position is less than the class-level attribute value\n",
+    "        if position <= Player.MAX_POSITION:\n",
+    "            self.position = position\n",
+    "        # If not, set equal to the class-level attribute\n",
+    "        else:\n",
+    "            Player.MAX_POSITION = position\n",
+    "\n",
+    "# Create Players p1 and p2\n",
+    "p1 = Player(9)\n",
+    "p2 = Player(5)\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 before assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "print(p1.MAX_POSITION)\n",
+    "print(p2.MAX_POSITION)\n",
+    "\n",
+    "# Assign 7 to p1.MAX_POSITION\n",
+    "p1.MAX_POSITION = 7\n",
+    "\n",
+    "print(\"MAX_POSITION of p1 and p2 after assignment:\")\n",
+    "# Print p1.MAX_POSITION and p2.MAX_POSITION\n",
+    "print(p1.MAX_POSITION)\n",
+    "print(p2.MAX_POSITION)\n",
+    "This code creates two Player objects p1 and p2 with positions of 9 and 5, respectively. It then prints the MAX_POSITION of both players before and after the assignment. Finally, it assigns 7 to p1.MAX_POSITION and prints both p1.MAX_POSITION and p2.MAX_POSITION again."
+   ]
   },
   {
    "cell_type": "code",
